k8s-kind/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keypouch
  labels:
    app.kubernetes.io/name: keypouch
