k8s-kind/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keypouch
  namespace: keypouch
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: keypouch-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keypouch-frontend
                port:
                  number: 80
